# springcard-ccid-serial

projects/zephyr/: CMakeLists.txt  prj.conf  project.h
projects/zephyr/boards/: mimxrt1050_evk.overlay
src/hal/zephyr/: zephyr_hal.c
src/sample/zephyr/: pcsc-serial-sample-main-zephyr.c
